[gd_scene load_steps=5 format=3 uid="uid://bmw8yidy2pkfy"]

[ext_resource type="Script" uid="uid://cgne0rc4ybnis" path="res://Scripts/health_component.gd" id="1_yf5fb"]
[ext_resource type="Texture2D" uid="uid://ctj3cmqk7ifak" path="res://Sprite/Lifebar/lifebar.png" id="2_vq1lo"]
[ext_resource type="Texture2D" uid="uid://dfsvdlosv7wb1" path="res://Sprite/Lifebar/lifebarover.png" id="3_3o58n"]
[ext_resource type="Script" uid="uid://d4euh3txfo863" path="res://Scripts/health_bar.gd" id="4_ume5d"]

[node name="HealthComponent" type="Node2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_yf5fb")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_right = 16.0
offset_bottom = 16.0
step = 0.0
texture_under = ExtResource("2_vq1lo")
texture_progress = ExtResource("3_3o58n")
script = ExtResource("4_ume5d")

[connection signal="value_changed" from="HealthBar" to="." method="_on_health_bar_value_changed"]
